--- a/css/style.css
+++ b/css/style.css
@@ -686,6 +686,27 @@ textarea {
 
 }
 
+@media (max-width:900px){
+
+   .about{
+      flex-direction: column;
+   }
+
+   .about img {
+      max-width: 700px;
+   }
+
+   .about .image {
+      flex: 1 1 0rem;
+  }
+
+  .about .content {
+   flex: 1 1 0rem;
+   text-align: center;
+}
+
+}
+
 @media (max-width:991px){
 
    html{
